--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-#---
-# TODO Append connection to DB
+spring.datasource.initialize=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
+spring.datasource.driverClassName=org.postgresql.Driver
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
